# Problem-Generator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CANONICAL.md  CHANGES.md  Dockerfile  Dockerfile.api  IMPLEMENTATION_ROADMAP.md  Makefile  PROJECT_SPEC.md  README.md  REQUIREMENTS.md  TECH_STACK.md  alembic.ini  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
archive/: CODE_REVIEW_2026-05-08_p3.md  REVIEW_REPORT_2026-05-07.md
docs/: ARCHITECTURE.md  ONBOARDING.md  PRINCIPLES.md  SPEC.md  index.html  v1-pipeline-flow.md
docs/archive/: 2026-05_strategic-review.md
docs/backlog/: 2026-05-08_post-p3.md  2026-05-09_post-p10.md  2026-05-09_post-p6.md  2026-05-09_post-p9.md  2026-05-10_post-p12.md
docs/baseline/: analysis-N3-deeper.md  v0.3.0-rc1-N3.md  v0.3.0-rc1.md  v1-phase-2b-N3-13algo.md  v1-phase-2c-N3-19algo.md  v1-pr-a5-N3.md  v1-pr-b5-N3-5algo.md
docs/catalog/: SCHEMA.md
docs/improvements/: 2026-05-10_root-cause-analysis.md  2026-05-14_quality-troubleshooting.md  2026-05-14_sandbox-infra-rca.md  2026-05-18_coder-osc-deterministic.md  2026-05-18_docker-mount-fix.md  2026-05-18_docker-workdir-fix.md  2026-05-18_osc-break-deterministic.md  2026-05-18_r12-retry-resilience.md  2026-05-19_coder-parse-fallback.md  2026-05-19_m3-multi-model.md  2026-05-19_r5-brute-oracle-phase-a.md  2026-05-20_m4-adversarial-review.md  2026-06-23_single-ir-architecture-rfc.md  2026-06-25_backbone-generalization-rfc.md  2026-06-25_easy-problem-track-rfc.md  docker-infra.md  multi-mechanism.md  oscillation.md  parsing-resilience.md  retry-resilience.md
docs/integration/: db-access-handoff.md  pipeline-deploy.md  pipeline-service-api-contract.md
docs/research/: 2026-05-29_verification-trust-tiers.md
docs/rfc/: phase3_agentic-graph-rearchitecture.md  phase3_blueprint-first-generation.md  v0.3.0_multi-mechanism.md
docs/site/: README.md  dashboard.html  how-it-works.html  index.html  requirements.html  tech-stack.html
ipe/: _io_render.py  _tracing.py  graph.py  hooks.py  io.py  llm.py  logging_config.py  observability.py  state.py
ipe/baseline/: __init__.py  __main__.py  runner.py
ipe/calibration/: __init__.py  anchors.json
ipe/catalog/: __init__.py  __main__.py  store.py
ipe/nodes/: _executor_helpers.py  _executor_phases.py  _history.py  algorithm_designer.py  architect.py  auditor.py  coder.py  evaluator.py  executor.py  generator.py  reviewer.py
ipe/sandbox/: __main__.py  docker_runner.py  rlimit_runner.py  runner.py  sandboxexec_runner.py  selector.py
ipe/v1/: __init__.py  graph.py  main_v1.py  persistence.py  router.py  state.py  synthesis_graph.py
ipe/v2/: __init__.py  admin.py  admin_page.html  api.py  batch.py  canonical_ingest.py  config.py  difficulty.py  grading_expand.py  graph.py  hybrid_ingest.py  main_v2.py  qa_fix.py  router.py  state.py
tests/: test_algorithm_designer.py  test_architect_consensus.py  test_architect_run.py  test_architect_unit.py  test_auditor_unit.py  test_baseline.py  test_calibration.py  test_catalog.py  test_catalog_cli.py  test_coder_reflexion.py  test_evaluator_unit.py  test_executor_phases_unit.py  test_generator_cap.py  test_hooks.py  test_io.py  test_llm.py  test_logging.py  test_observability.py  test_phase_a_feedback.py  test_reviewer.py  test_routing_units.py  test_sandbox_main.py  test_selector.py  test_state.py  test_tracing.py
(+246 files in other folders)
