[project]
name = "ipe"
version = "0.1.0"
description = "Infinite Problem Engine — algorithmic problem generation pipeline"
requires-python = ">=3.11"
authors = [{ name = "LsMin124" }]
dependencies = [
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langchain-anthropic>=0.2.0,<1.4",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "jsonschema>=4.20.0",
    "pydantic>=2.0.0",
    "fastapi>=0.115",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]
api = [
    "uvicorn>=0.30",
]

[project.scripts]
ipe-v2 = "ipe.v2.main_v2:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ipe*"]
exclude = ["tests*", "archive*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

[tool.mypy]
strict = true
disallow_untyped_defs = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

# uvicorn 은 타입 스텁 미배포 — admin 콘솔의 server 기동(uvicorn.run)에서만 import.
# CI mypy --strict 의 import-not-found 회피 (런타임 의존성은 pyproject 에 선언됨).
[[tool.mypy.overrides]]
module = "uvicorn.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: marks tests requiring real LLM (manual trigger)",
]
